--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>iGaming Afrika</title>
+    <title>Africa Gaming Summit</title>
     <!-- Remove the initial script -->
   </head>
   <body>
