--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en"> <!-- Remove class="light" -->
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/image2vector.svg" />
+    <link rel="icon" type="image/svg+xml" href="/iGaming-Logo-icon-2.webp" />
     <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Africa Gaming Summit</title>
+    <title>iGaming AFRIKA Summit</title>
     <!-- Remove the initial script -->
   </head>
   <body>
