added footer form integration to momgodb

--- a/client/index.html
+++ b/client/index.html
@@ -1,12 +1,25 @@
-<!doctype html>
-<html lang="en"> <!-- Remove class="light" -->
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/iGaming-Logo-icon-2.webp" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- ✅ SEO Meta Tags -->
+    <meta
+      name="keywords"
+      content="iGaming Africa, Gambling Summit, iGaming Summit, Sports Betting Conference, Expo, iGaming Expo, African Gaming Industry, Sarit Expo Event, Sarit Expo Centre, Sports Betting, Betting Technology Africa, iGaming AFRIKA Summit 2026, iGaming AFRIKA Summit, iGaming AFRIKA Summit Nairobi"
+    />
+    <meta
+      name="description"
+      content="Join industry leaders, innovators, and stakeholders at the iGaming AFRIKA Summit 2026 — a three-day event at Sarit Expo Centre showcasing the future of gaming, eSports, sports betting, and iGaming technology in Africa."
+    />
+
     <title>iGaming AFRIKA Summit</title>
-    <!-- Remove the initial script -->
   </head>
   <body>
     <div id="root"></div>
