google analytics tag script

--- a/client/index.html
+++ b/client/index.html
@@ -40,5 +40,20 @@
       })();
     </script>
     <!--End of Tawk.to Script-->
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-N0GWH9VRP9"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-N0GWH9VRP9");
+    </script>
   </body>
 </html>
